2007-05-17	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/resources/fr.ts:
	* ica/resources/fr.qm:
	* ima/resources/fr.ts:
	* ima/resources/fr.qm:
	* lib/resources/fr.ts:
	* lib/resources/fr.qm:
	* setup/resources/fr.ts:
	* setup/resources/fr.qm:
	updated French localization from Guillaume Allegre
	(guillaume/dot/allegre/at/silecs/dot/info)

	* ima/src/remote_control_widget.h:
	* ima/src/remote_control_widget.cpp:
	* ima/src/main_window.h:
	* ima/src/main_window.cpp:
	reload snapshot-list after taking snapshot in remote-control-/
	view-live-mode

	* lib/src/dsa_key.cpp:
	fixed case where ICA would quit on authentication with bad signed data

	* ima/resources/de.ts:
	* ima/resources/de.qm:
	updated German localization

	* ima/src/classroom_manager.cpp:
	* ima/src/classroom_manager.h:
	added "hide teacher-clients"-feature in classroom-menu

	* ima/resources/greenled.png:
	* ima/italc.qrc:
	* ima/src/classroom_manager.cpp:
	highlight current classroom in classroom-menu

	* ima/dialogs/client_settings.ui:
	* ima/src/dialogs.cpp:
	* ima/src/classroom_manager.cpp:
	* ima/src/client.h:
	* ima/src/client.cpp:
	added "type"-property to clients to have another distinction between
	different clients

	* ima/src/classroom_manager.cpp:
	* ima/src/client.cpp:
	* ima/src/client.h:
	more clear identifiers in enums

	* ima/src/classroom_manager.cpp:
	* ica/src/ica_main.cpp:
	cleanups

	* ica/src/local_system_ica.cpp:
	fixed compiling error

2007-05-14	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/resources/mouse.png:
	removed

	* ima/italc.qrc:
	* ima/resources/no_mouse.png:
	* ima/src/remote_control_widget.cpp:
	better icon for blocked input

	* lib/include/isd_base.h:
	cleanups

	* ica/win32/src/VNCHooks/SharedData.h:
	* ica/win32/src/VNCHooks/SharedData.cpp:
	* ica/win32/src/VNCHooks/VNCHooks.cpp:
	* ica/win32/src/vncServer.cpp:
	* ica/src/local_system_ica.h:
	* ica/src/local_system_ica.cpp:
	* ica/src/isd_server.cpp: